--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <div class="wrapper">
             <div class="mobile_gnb_wrap hide">
-                <nav class="mobile_gnb_nav hide">
+                <nav class="mobile_gnb_nav">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About Me</a></li>
